Deployment/e2e/applications/BNBC/01-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bnbc

---
apiVersion: v1
kind: Namespace
metadata:
  name: bnbc-shop
