Deployment/e2e/applications/BNBC/05-blog.yaml
# Cookbooks Interceptor page
---
kind: Pod
apiVersion: v1
metadata:
  name: bnbc-webserver
  namespace: bnbc
  labels:
    app: bnbc-webserver

spec:
  containers:
    - name: nginx
      image: nginx

      volumeMounts:
        - name: content
          mountPath: "/usr/share/nginx/html"
          readOnly: true
        - name: config-templates
          mountPath: "/etc/nginx/templates"
          readOnly: true

  volumes:
    - name: content
      configMap:
        name: bnbc-content
    - name: config-templates
      configMap:
        name: nginx-config-templates

---
kind: Service
apiVersion: v1
metadata:
  name: bnbc-webserver
  namespace: bnbc

spec:
  selector:
    app: bnbc-webserver

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-config-templates
  namespace: bnbc
data:
  default.conf.template: |
    server {
      listen        80;
      server_name   blog.bnbc.example;
      location / {
        root   /usr/share/nginx/html;
        index  /index.html;
        add_header Cache-Control no-cache;
        try_files $uri $uri.html $uri/index.html;
      }
    }

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: bnbc-content
  namespace: bnbc
data:
  index.html: |
    <html>
    <head>
        <title>Slice & Spread</title>
        <meta http-equiv="Pragma" content="no-cache"/>
        <meta http-equiv="Cache-Control" content="no-cache"/>
    </head>
    <body>
    <h1 class="headline">Maya and Liam Blog</h1>
    <p>
        In a quaint village, Maya and Liam, both passionate food enthusiasts, discovered a shared love for all things
        bread
        and butter. Combining Maya's knack for whipping up delectable bread recipes and Liam's expertise in sourcing
        unique
        butter varieties, they embarked on a flavorful journey together. Their blog, "Slice & Spread" became an online
        haven
        for bread aficionados and butter connoisseurs alike. With mouthwatering photos and engaging storytelling, they
        chronicled their experiments with sourdough, baguettes, and every butter under the sun. As their following grew,
        so did their bread-butter expertise, leading them to host virtual workshops and collaborate with renowned chefs.
        Through "Slice & Spread," Maya and Liam not only turned their culinary passion into a thriving business but also
        inspired a worldwide community to savor the simple joys of the perfect bread and butter pairing.
    </p>
    
    <footer>
        <a href="//login.bnbc.example/logout?post_logout_redirect_uri=//blog.bnbc.example">logout</a>
    </footer>
    </body>
    </html>

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ham-webserver
  namespace: bnbc
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: uitsmijter-forward-auth@kubernetescrd

spec:
  tls:
    - secretName: bnbc.example
  rules:
    - host: blog.bnbc.example
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: bnbc-webserver
                port:
                  number: 80
