Deployment/e2e/applications/BNBC/05-shop.yaml
# Cookbooks Interceptor page
---
kind: Pod
apiVersion: v1
metadata:
  name: bnbc-webserver
  namespace: bnbc-shop
  labels:
    app: bnbc-webserver

spec:
  containers:
    - name: nginx
      image: nginx

      volumeMounts:
        - name: content
          mountPath: "/usr/share/nginx/html"
          readOnly: true
        - name: config-templates
          mountPath: "/etc/nginx/templates"
          readOnly: true

  volumes:
    - name: content
      configMap:
        name: bnbc-content
    - name: config-templates
      configMap:
        name: nginx-config-templates

---
kind: Service
apiVersion: v1
metadata:
  name: bnbc-webserver
  namespace: bnbc-shop

spec:
  selector:
    app: bnbc-webserver

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-config-templates
  namespace: bnbc-shop
data:
  default.conf.template: |
    server {
      listen        80;
      server_name   shop.bnbc.example;
      location / {
        root   /usr/share/nginx/html;
        index  /index.html;
        add_header Cache-Control no-cache;
        try_files $uri $uri.html $uri/index.html;
      }
    }

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: bnbc-content
  namespace: bnbc-shop
data:
  index.html: |
    <html>
    <head>
        <title>The power of culinary creativity</title>
        <meta http-equiv="Pragma" content="no-cache"/>
        <meta http-equiv="Cache-Control" content="no-cache"/>
    </head>
    <body>
    <h1 class="headline">Slice & Spread - the power of culinary creativity</h1>
    <p>
        Maya and Liam, the dynamic duo behind the sensational blog turned empire "Slice & Spread" have transcended
        culinary boundaries to create a billion-dollar sensation. Their mastery of the art of bread and butter has led
        to an unprecedented global following, with their online shop becoming a veritable haven for gastronomes and
        foodies. With innovative recipes, unparalleled expertise, and a passion that knows no bounds, Maya and Liam's
        journey from a humble blog to a billion-dollar enterprise stands as a testament to the power of culinary
        creativity and the profound impact of sharing one's passion with the world.
    </p>
    
    <footer>
        <a href="//login.bnbc.example/logout?post_logout_redirect_uri=//shop.bnbc.example">logout</a>
    </footer>
    </body>
    </html>

---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ham-webserver
  namespace: bnbc-shop
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: uitsmijter-forward-auth@kubernetescrd

spec:
  tls:
    - secretName: bnbc.example
  rules:
    - host: shop.bnbc.example
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: bnbc-webserver
                port:
                  number: 80
